--- a/College.Model/College.Model.csproj
+++ b/College.Model/College.Model.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />  
+  <!-- <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" /> -->
+</ItemGroup>
+<ItemGroup>
+    <!-- <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" /> -->
+  </ItemGroup>
+
 </Project>
