--- a/College.Api/appsettings.Development.json
+++ b/College.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-GO2IPJI;Database=CollegeApp;Trusted_Connection=True;"
   }
 }
