--- a/College.Infrastructure/College.Infrastructure.csproj
+++ b/College.Infrastructure/College.Infrastructure.csproj
@@ -8,10 +8,10 @@
     <!-- <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/> -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
+    <!-- <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    </PackageReference> -->
     <!-- <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0"/> -->
   </ItemGroup>
   <ItemGroup>
